--- a/templates/accessoryTemplate.html
+++ b/templates/accessoryTemplate.html
@@ -1,3 +1,8 @@
+<!-- Author - Mihil Ranathunga 
+*** Email - mihil@wso2.com
+*** project-wso2 Hardware Repository
+*** interns UOM-2014 -->  
+
 {{^status}}
 <table style='width: 700px; margin:0px 0px 15px 50px'>
 <thead>
