--- a/templates/upgradeTemplate.html
+++ b/templates/upgradeTemplate.html
@@ -1,3 +1,9 @@
+<!-- Author - Mihil Ranathunga 
+*** Email - mihil@wso2.com
+*** project-wso2 Hardware Repository
+*** interns UOM-2014 -->  
+
+
 <table style='width: 700px; margin:0px 0px 15px 50px'>
 <thead>
 <tr>
