--- a/templates/issueTemplate.html
+++ b/templates/issueTemplate.html
@@ -1,3 +1,8 @@
+<!-- Author - Mihil Ranathunga 
+*** Email - mihil@wso2.com
+*** project-wso2 Hardware Repository
+*** interns UOM-2014 -->  
+
 <table style='width: 600px; margin:0px 0px 15px 50px'>
 <thead>
 <tr>
