--- a/templates/accessoryTemplate.html
+++ b/templates/accessoryTemplate.html
@@ -52,8 +52,8 @@
 {{^accessory_id}}
 	
 <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;">
-		<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-		<strong>Information:</strong> No Accessories For this device</p>
+		<span><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+		<strong>Information:</strong> No Accessories For this device</span>
 	</div>
 
 
