--- a/templates/issueTemplate.html
+++ b/templates/issueTemplate.html
@@ -13,7 +13,7 @@
 </th>
 {{/status}}
 {{^status}}
-<th style ='height: 15px'>New
+<th style ='height: 15px'>Pending
 </th>
 {{/status}}
 </tr>
@@ -77,7 +77,7 @@
 {{/issue_number}}
 {{^issue_number}}
 <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;">
-		<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-		<strong>Information:</strong> No Issues For this device</p>
+		<span><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+		<strong>Information:</strong> No Issues For this device</span>
 	</div>
 {{/issue_number}}
