--- a/templates/upgradeTemplate.html
+++ b/templates/upgradeTemplate.html
@@ -57,7 +57,7 @@
 {{^upgrade_id}}
 
 <div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;">
-		<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-		<strong>Information:</strong> No upgrades For this device</p>
+		<span><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+		<strong>Information:</strong> No upgrades For this device</span>
 	</div>
 {{/upgrade_id}}
