added common css page added logging al working in jaggery

--- a/templates/issueTemplate.html
+++ b/templates/issueTemplate.html
@@ -23,7 +23,7 @@
 <td><b>Device Id</b>
 </td>
 
-<td>{{device_id}}
+<td><span><a id="ass" href="userdevice?id={{device_id}}" onclick="return new function(){window.open('userdevice?id={{device_id}}');}" >{{device_id}}</a></span>
 </td>
 </tr>
 <tr>
