--- a/templates/issueTemplate.html
+++ b/templates/issueTemplate.html
@@ -3,7 +3,9 @@
 *** project-wso2 Hardware Repository
 *** interns UOM-2014 -->  
 {{#issue_number}}
-<table style='width: 600px; margin:0px 0px 15px 50px'>
+<table style='width: 600px; margin:0px 0px 15px 50px -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;'>
 <thead>
 <tr>
 <th style ='width: 100px;height: 15px' >{{issue_number}}
