--- a/templates/upgradeTemplate.html
+++ b/templates/upgradeTemplate.html
@@ -4,7 +4,9 @@
 *** interns UOM-2014 -->  
 
 {{#upgrade_id}}
-<table style='width: 700px; margin:0px 0px 15px 50px'>
+<table style='width: 700px; margin:0px 0px 15px 50px -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;'>
 <thead>
 <tr>
 <th style ='width: 200px;height: 15px' >upgrade ID: {{upgrade_id}}
