--- a/templates/warrantyTemplate.html
+++ b/templates/warrantyTemplate.html
@@ -2,7 +2,9 @@
 *** Email - mihil@wso2.com
 *** project-wso2 Hardware Repository
 *** interns UOM-2014 -->  
-<table style='width: 700px; margin:0px 0px 15px 50px'>
+<table style='width: 700px; margin:0px 0px 15px 50px -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;'>
 {{#war_id}}
 <thead>
 <tr>
