--- a/templates/accessoryTemplate.html
+++ b/templates/accessoryTemplate.html
@@ -5,7 +5,9 @@
 
 {{^status}}
 {{#accessory_id}}
-<table style='width: 700px; margin:0px 0px 15px 50px'>
+<table style='width: 700px; margin:0px 0px 15px 50px -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;'>
 <thead>
 <tr>
 <th style ='width: 300px;height: 15px' >Accessory SN: {{serial_number}}
