--- a/templates/requestTemplate.html
+++ b/templates/requestTemplate.html
@@ -4,7 +4,9 @@
 *** interns UOM-2014 -->  
 
 {{#status}}
-<table style='width: 600px; margin:0px 0px 15px 50px'>
+<table style='width: 600px; margin:0px 0px 15px 50px -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;'>
 <thead>
 <tr>
 <th style ='width: 100px;height: 15px' >Request ID {{request_id}}
